<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/title_order_list"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/navigation_drawable_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_header_height"
            android:background="@drawable/bg_blue_gradient"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivUserImage"
                android:layout_width="@dimen/user_profile_image_size"
                android:layout_height="@dimen/user_profile_image_size"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_icon_user"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:theme="@style/UserProfileTextView"
                tools:text="@tools:sample/us_phones" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOrderList"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/title_order_list"
            app:drawableStartCompat="@drawable/ic_order_fill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvMenuItems"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_list_menu"
            app:drawableStartCompat="@drawable/ic_menu_items" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvFavServe"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_fav_serve"
            app:drawableStartCompat="@drawable/ic_fav_serve" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvReport"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_report"
            app:drawableStartCompat="@drawable/ic_report" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvSettings"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_setting"
            app:drawableStartCompat="@drawable/ic_setting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvSync"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_sync"
            app:drawableStartCompat="@drawable/ic_sync" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvSecurity"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_security"
            app:drawableStartCompat="@drawable/ic_security" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvShare"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_share"
            app:drawableStartCompat="@drawable/ic_share" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvRating"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_rating"
            app:drawableStartCompat="@drawable/ic_star" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvReportBug"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_send_report"
            app:drawableStartCompat="@drawable/ic_adb" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvInfo"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_info"
            app:drawableStartCompat="@drawable/ic_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tvSignOut"
            style="@style/NavigationDrawerItemTextView"
            android:layout_width="match_parent"
            android:text="@string/item_logout"
            app:drawableStartCompat="@drawable/ic_log_out" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
