<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.setup.step2.menuitemdetails.MenuItemDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_edit_item"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/ivMenuItemDetails"
        android:layout_width="@dimen/menu_item_details_image_size"
        android:layout_height="@dimen/menu_item_details_image_size"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="ContentDescription"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_rounded_corner_textview"
        android:padding="4dp"
        android:text="@string/text_select_image"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ivMenuItemDetails"
        app:layout_constraintEnd_toEndOf="@id/ivMenuItemDetails"
        app:layout_constraintStart_toStartOf="@id/ivMenuItemDetails" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:hint="@string/menu_item_name"
        android:theme="@style/TextInputLayoutMenuDetails"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivMenuItemDetails">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtItemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/lorem" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfItemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/menu_item_price"
        android:theme="@style/TextInputLayoutMenuDetails"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfItemName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtItemPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:text="@tools:sample/lorem" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfItemUnit"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/menu_item_unit"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfItemPrice">

        <AutoCompleteTextView
            android:id="@+id/tvItemUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tfItemGroup"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/transparent"
        android:hint="@string/menu_item_group"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tfItemUnit">

        <AutoCompleteTextView
            android:id="@+id/tvMenuItemGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        style="@style/FillWidthButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/string_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
