<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="@dimen/dp_48"
        android:background="@drawable/ic_logo"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cukcuk"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="@id/ivLogo"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_key_selector"
        android:drawableStart="@drawable/ic_icon_user"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/string_enter_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <ImageView
        android:id="@+id/ivClearUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/ic_icon_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edtUsername"
        app:layout_constraintEnd_toEndOf="@id/edtUsername"
        app:layout_constraintTop_toTopOf="@id/edtUsername"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_key_selector"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/dp_8"
        android:hint="@string/string_enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUsername" />

    <ImageView
        android:id="@+id/ivClearPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/ic_icon_clear"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/edtPassword"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@id/edtPassword"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/string_forget_password"
        android:textColor="@drawable/selector_text_view_state"
        app:layout_constraintEnd_toEndOf="@id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dp_40"
        android:layout_marginEnd="16dp"
        android:padding="12dp"
        android:text="@string/btn_login"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPassword" />

    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_do_you_have_an_account"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textColor="@drawable/selector_text_view_state"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_info_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRegister"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
